docs/apim/4.8/self-hosted-installation-guides/.zip.md
---
description: Install API Management 4.8 from the .zip distribution. Follow the steps for a self-hosted deployment on your own machine.
---

# .ZIP

## Overview

This guide explains how to install Gravitee APIM using the `.zip` distribution. This installation method is suitable for environments where RPM packages are not supported or preferred.

{% hint style="warning" %}
This installation guide is for only development and quick start purposes. Do not use it for production environments. For more information about best practices for production environments, contact your Technical Account Manager.
{% endhint %}

## Prerequisites

Before you install APIM with `.zip` packages, complete the following steps:

* Download the `.zip` binaries from [Gravitee.io Downloads](https://download.gravitee.io/#graviteeio-apim/distributions/).
* Ensure your Gravitee API Management directory uses the following structure:
  * `bin/`: Start scripts
  * `conf/`: Configuration files
  * `lib/`: Libraries

## Install Gravitee APIM with .ZIP

{% hint style="info" %}
The following example installs Gravitee APIM on Ubuntu 22.04.
{% endhint %}

1.  Install Java21 using the following commands:

    ```bash
    sudo apt update
    sudo apt install openjdk-21-jdk -y
    java -version
    ```
2.  Install MongoDB using the following commands:

    ```bash
    # Import GPG Key
    curl -fsSL https://pgp.mongodb.com/server-8.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg --dearmor

    # Create sources list
    echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/8.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list

    # Update and install
    sudo apt update
    sudo apt install -y mongodb-org

    # Enable and start
    sudo systemctl daemon-reload
    sudo systemctl enable mongod
    sudo systemctl start mongod

    # Verify
    sudo ss -lntp "( sport = 27017 )"
    ```
3.  Install Elasticsearch using the following commands:

    ```bash
    # Import GPG Key
    wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo gpg --dearmor -o /usr/share/keyrings/elasticsearch-keyring.gpg

    # Add repository
    echo "deb [signed-by=/usr/share/keyrings/elasticsearch-keyring.gpg] https://artifacts.elastic.co/packages/8.x/apt stable main" | sudo tee /etc/apt/sources.list.d/elastic-8.x.list

    # Update and install
    sudo apt update
    sudo apt install elasticsearch -y

    # Enable and start
    sudo systemctl daemon-reload
    sudo systemctl enable elasticsearch.service
    sudo systemctl start elasticsearch.service

    # Verify (with or without cert)
    curl -X GET --cacert /etc/elasticsearch/certs/http_ca.crt -u elastic:YOUR_ELASTIC_PASSWORD "https://localhost:9200/?pretty"
    curl -X GET --insecure -u elastic:<YOUR_ELASTIC_PASSWORD> "https://localhost:9200/?pretty"
    ```

    * Replace `<YOUR_ELASTIC_PASSWORD>` with your Elastic password.
4.  Install the APIM Components (ZIP) using the following commands:

    ```bash
    # Unzip and copy
    unzip gravitee-standalone-distribution-4.x.0.zip
    cp -r graviteeio-full-4.x.0/graviteeio-apim-gateway-4.x.0 <DESTINATION_FOLDER>/
    cp -r graviteeio-full-4.x.0/graviteeio-apim-management-api <DESTINATION_FOLDER>/
    cp -r graviteeio-full-4.x.0/graviteeio-apim-management-ui <DESTINATION_FOLDER>/
    cp -r graviteeio-full-4.x.0/graviteeio-apim-portal-ui <DESTINATION_FOLDER>/
    ```

    * Replace `<DESTINATION_FOLDER>` with the path to the folder in which to store the component.
5.  To start your APIM Gateway, use the following commands:

    ```bash
    cd [DESTINATION_FOLDER]/graviteeio-apim-gateway-4.x.0
    ./bin/gravitee
    ```

{% hint style="info" %}
You can also run the Gateway as daemon:

1.  To run the Gateway as a daemon, use the following command:

    ```bash
    ./bin/gravitee -d -p=/var/run/gio.pid
    # Logs in $GRAVITEE_HOME/logs/
    ```
2.  To stop the Gateway running as a daemon, use the following command:

    ```bash
    kill \`cat /var/run/gio.pid\`
    ```
{% endhint %}

## Verification

{% hint style="info" %}
The services may take a few minutes to initialize.
{% endhint %}

To verify that you installed Gravitee APIM correctly, complete the following steps:

*   Use the following command:

    ```bash
    curl -X GET http://localhost:8082/
    ```

    The command returns the following message: `No context-path matches the request URI` .
* Ensure that you can access the Management Console and the Developer Portal:
  * To access the Management Console, go to `http://localhost:8084`. By default, the username and password are both `admin`.
  * To access the Developer Portal, go to `http://localhost:8085`. By default, the username and password are both `admin`.
